--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@ body {
   background-color: rgba(255, 255, 255, 0.85);
   border-radius: 40px;
   width: 960px;
+  height:270px;
   margin: 20px auto;
   display: none;
   text-align: center;
@@ -167,6 +168,16 @@ body {
 }
 
 /****************** WIN LOSE DIV ********************/
+.winLoseContainer {
+  width: 100%;
+  height: 120%;
+  background: rgba(0, 0, 0, 0.75);
+  position: absolute;
+  top: -20px;
+  left: 0;
+  display: none;
+}
+
 .winLoseDiv {
   text-align: center;
   width: 60%;
